<?xml version="1.0" encoding="utf-8"?><!--Bhargav Patel (N01373029) & Ripal Patel (N01354619) & Vidhi Kanhye (N01354573) & Nicholas Mohan (N01361663), Section-RNA-->

<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">SMARTBEATS</string>
    <string name="choose_color">Choose Color</string>
    <string name="chosen_color">Your chosen color is:</string>
    <string name="set_color">Set</string>
    <string name="light_settings">Light Settings</string>
    <string name="show_settings">show Settings</string>
    <string name="change_background">Change background Color</string>
    <string name="portrait_mode">Lock to Portrait Mode</string>
    <string name="adjust_bright">Adjust Brightness:</string>
    <string name="colour_picker_dialog_cancel_btn">Cancel</string>
    <string name="colour_picker_dialog_ok_btn">OK</string>
    <string name="colour_picker_dialog_title">Choose Color</string>
    <string name="menu_bar_help_btn_link">https://www.google.ca</string>
    <string name="menu_bar_music_btn_link">https://www.youtube.ca</string>
    <string name="snackbar_pwr_btn_on">Power On</string>
    <string name="snackbar_pwr_btn_off">Power Off</string>
    <string name="request_perms_alert_dialog_title">Permission Needed</string>
    <string name="request_perms_alert_dialog_message">Do you wish to turn on Bluetooth?</string>
    <string name="request_perms_alert_dialog_positive_btn">Agree</string>
    <string name="request_perms_alert_dialog_negative_btn">Disagree</string>
    <string name="request_perms_deny_snackbar_message">Bluetooth disabled</string>
    <string name="bluetooth_enabled_snackbar_message">Bluetooth Enabled</string>
    <string name="deny_permission_snackbar_message">Permission Denied!</string>
    <string name="back_key_pressed_title">Are you sure ?</string>
    <string name="back_key_pressed_message">This will exit the application</string>
    <string name="back_key_pressed_positive_btn">Yes</string>
    <string name="back_key_pressed_negative_btn">No</string>
    <string name="menu_bar_help_btn_title">Help</string>
    <string name="menu_bar_music_btn_title">Music</string>
    <string name="menu_bar_lights_pwr_btn_title">Power</string>
    <string name="menu_bar_bluetooth_btn_title">Bluetooth</string>
    <string name="lock_portrait">Portrait Lock</string>
    <string name="portrait_lock_disable">Portrait Lock Disabled</string>
    <string name="select_mode">Select light mode:</string>
    <string name="select_light_mode">Please select light mode</string>
    <string name="party_mode">Party</string>
    <string name="zen_mode">Zen</string>
    <string name="focus_mode">Focus</string>
    <string name="sleep_mode">Sleep</string>
    <string name="workout_mode">Workout</string>
    <string name="field_not_empty">Field can\'t be empty</string>
    <string name="enter_positive_number">Please enter a positive number</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>

    <string-array android:name="shalomSongSpinner" name="Songs">
        <item>BLR - Taj</item>
        <item>ATC - All Around The World</item>
        <item>Dynoro - In My Mind</item>
        <item>MEDUZA - Lose Control</item>
        <item>Regard - Ride It</item>
        <item>SAINt Jhn - Roses</item>
    </string-array>

    <string name="title_review">Review</string>
    <string name="title_settings">Settings</string>
    <string name="title_lights">Lights</string>
    <string name="title_music">Music</string>
    <string name="review_page">Your Review matters!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_a_email_address">Enter A Email Address</string>
    <string name="enter_a_comment">Enter A Comment</string>
    <string name="minutes">Minutes</string>
    <string name="reset">reset</string>
    <string name="t_start">START</string>
    <string name="set">Set</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="reset_btn_label">Reset</string>
    <string name="submit_btn_label">Submit</string>
    <string name="model_no">Model No:</string>
    <string name="read">read</string>
    <string name="userReview">user_review</string>
    <string name="sent_Review">reviewSent</string>
    <string name="phoneNUm">pNumber</string>
    <string name="userValue">userValue</string>
    <string name="userValue2">userValue2</string>
    <string name="uservalue3">userValue3</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="cmnts">Comments</string>
    <string name="rateReading">rateReading</string>
    <string name="sent_success">Successfully sent!</string>
    <string name="error">Error Failed</string>
    <string name="myNoti">My notification</string>
    <string name="review_submission">Review Submission</string>
    <string name="review_message">Thanks! Your review has been submitted successfully!</string>
    <string name="rating">"Rating: "</string>

    <string name="select_song_below">Select a Song Below</string>
    <string name="atc">ATC - All Around The World</string>
    <string name="mp3">.mp3</string>
    <string name="downloading_atc">Downloading ATC - All Around The World …</string>
    <string name="dynoro">Dynoro - In My Mind</string>
    <string name="downloading_dynoro">Downloading Dynoro - In My Mind …</string>
    <string name="meduza">MEDUZA - Lose Control</string>
    <string name="downloading_meduza">Downloading MEDUZA - Lose Control …</string>
    <string name="rideIt">Regard - Ride It</string>
    <string name="downloading_riedIt">Downloading Regard - Ride It …</string>
    <string name="roses">SAINt Jhn - Roses</string>
    <string name="downloading_roses">Downloading SAINt Jhn - Roses …</string>
    <string name="mp3_pre_download">MP3 PRE-DOWNLOAD</string>
    <string name="mp3_downloaded">MP3 DOWNLOADED</string>
    <string name="ModelNum">ModelNum</string>
    <string name="bluetoothOn">Please turn on Bluetooth</string>
    <string name="FireStoreOff">Unable to connect to database</string>
    <string name="successMsg">Success</string>
    <string name="must_be_in_music_fragment_label">Must Be In Music Fragment!</string>
    <string name="must_enable_an_internet_connection">Must Enable a Internet Connection</string>
    <string name="Bluetooth_on">Please Turn on Bluetooth</string>
    <string name="Eval_review">Evaluating Your Review</string>
    <string name="moment">Give us a few moments</string>
    <string name="Invalid_email">Invalid Email!</string>
    <string name="empty_field">Invalid Name! Field Empty</string>
    <string name="Invalid_comment">Invalid Comment! Empty Field</string>
    <string name="Invalid_phone_number">Invalid Phone Number</string>
    <string name="night_enabled">Night mode enabled</string>
    <string name="night_disabled">Night mode disabled</string>
    <string name="channel_1">This is Channel 1</string>
    <string name="channel_2">This is Channel 2</string>


</resources>
