<?xml version="1.0" encoding="utf-8"?>
<!--Bhargav Patel (N01373029) & Ripal Patel (N01354619) & Vidhi Kanhye (N01354573) & Nicholas Mohan (N01361663), Section-RNA-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music_icon_foreground"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_lights"
        android:icon="@drawable/light_icon_foreground"
        android:title="@string/title_lights" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_icon_foreground"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_review" />

</menu>