<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lilac">


    <Button
        android:id="@+id/shalom_settings_aboutus_btn"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="357dp"
        android:backgroundTint="@color/purple_200"
        android:text="About Us"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/shalom_settings_privacypolicy_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="285dp"
        android:backgroundTint="@color/purple_200"
        android:text="Privacy Policy"
        android:textAlignment="textStart" />


    <TextView
        android:id="@+id/shalom_settings_general_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="618dp"
        android:text="General"
        android:textColor="@color/purple_500"
        android:theme="@style/small_title_text"/>

    <TextView
        android:id="@+id/shalom_settings_aboutus_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="443dp"
        android:text="About Us"
        android:textColor="@color/purple_500"
        android:theme="@style/small_title_text"/>

    <Switch
        android:id="@+id/shalom_settings_nightmode_switch"
        android:layout_width="407dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="540dp"
        android:text="Night Mode"
        android:thumbTint="@color/grape"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/shalom_settings_portrait_switch"
        android:layout_width="406dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="477dp"
        android:text="Portrait Mode"
        android:thumbTint="@color/grape"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/shalom_settings_Amp_tvName"
        android:layout_width="216dp"
        android:layout_height="22dp"
        android:layout_alignTop="@+id/shalom_settings_privacypolicy_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="176dp"
        android:layout_toStartOf="@+id/shalom_settings_floating_button"
        android:text="Amp Current       :"
        android:textColor="@color/purple_500"
        android:theme="@style/small_title_text">
    </TextView>

    <TextView
        android:id="@+id/shalom_settings_Amp_tv"
        android:layout_width="95dp"
        android:layout_height="19dp"
        android:layout_alignTop="@+id/shalom_settings_privacypolicy_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="169dp"
        android:layout_toStartOf="@+id/shalom_settings_floating_button"
        android:textStyle="bold"></TextView>
    <TextView
        android:id="@+id/shalom_settings_Temp_tvName"
        android:layout_width="222dp"
        android:layout_height="21dp"
        android:layout_alignTop="@+id/shalom_settings_privacypolicy_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="214dp"
        android:layout_toStartOf="@+id/shalom_settings_floating_button"
        android:text="Temperature       :"
        android:textColor="@color/purple_500"
        android:theme="@style/small_title_text">
    </TextView>

    <TextView
        android:id="@+id/shalom_settings_Temp_tv"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:layout_alignTop="@+id/shalom_settings_privacypolicy_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="206dp"
        android:layout_toStartOf="@+id/shalom_settings_floating_button"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/shalom_settings_Temp_tv2"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:layout_alignTop="@+id/shalom_settings_privacypolicy_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="251dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="205dp"
        android:textStyle="bold"></TextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shalom_settings_floating_button"
        backgroundTint="#00FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|right"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@color/purple_200"
        android:elevation="10dp"
        android:src="@drawable/email_support" />

</RelativeLayout>